[metadata]
name = hubspot-api
version = attr: hs_api.__version__
author = Superscript
author_email = dataprocesses@gosuperscript.com
url = https://gosuperscript.com
description = Superscript Hubspot API
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    requests
    python-dotenv==0.19.2
    hubspot-api-client==5.0.1

[options.packages.find]
where = src
include = hs_api*

[options.extras_require]
dev =
    isort==5.10.1
    pytest==6.2.5
    flake8==4.0.1
    black==22.3.0
    twine==4.0.2

[flake8]
max_line_length = 119
ignore = W503
exclude = .git,__pycache__,
